fix untuk overlapping content OC ke header bar dan bottom bar

--- a/src/app/component/global/bottom-bar/bottom-bar.component.scss
+++ b/src/app/component/global/bottom-bar/bottom-bar.component.scss
@@ -1,6 +1,6 @@
 ion-footer {
-  position: sticky; /* Add this line */
-  bottom: 0; /* Add this line */
+  position: fixed;
+  bottom: 0;
   background-color: #ff9900;
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
